--- a/META.yml
+++ b/META.yml
@@ -1,5 +1,5 @@
 name: CPANPLUS
-version: 0.0562
+version: 0.059_01
 abstract: Ameliorated interface to the CPAN
 author: Jos Boumans <kane@cpan.org>
 license: perl
