--- a/META.yml
+++ b/META.yml
@@ -13,4 +13,8 @@ no_index:
     - lib/CPANPLUS/inc
     - inc
     - t
-version: 0.9104
+resources:
+  license: http://dev.perl.org/licenses/
+  homepage: http://github.com/jib/cpanplus-devel
+  repository: http://github.com/jib/cpanplus-devel
+version: 0.9105
