--- a/META.yml
+++ b/META.yml
@@ -2,6 +2,7 @@
 abstract: Ameliorated interface to the CPAN
 author: 'Jos Boumans <kane@cpan.org>'
 distribution_type: module
+dynamic_config: 1
 generated_by: Module::Install version 0.650
 license: perl
 meta-spec:
@@ -17,4 +18,4 @@ resources:
   license: http://dev.perl.org/licenses/
   homepage: http://github.com/jib/cpanplus-devel
   repository: http://github.com/jib/cpanplus-devel
-version: 0.9109
+version: 0.9110
